--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,7 @@
 
 /* Main Section */
 .main {
-  max-width: 100%;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
@@ -75,4 +75,49 @@
 .failure-reason-list {
   list-style: none;
   line-height: 1.7;
+}
+/* My Plan Section */
+.plans {
+  margin-bottom: 130px;
+}
+.plan-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 40px;
+  color: #151414;
+}
+.plans-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
+}
+.plans-image {
+}
+.plan-sub-title {
+  font-weight: 700;
+  font-size: 30px;
+  color: #151414;
+}
+.plan-description {
+  font-weight: 500;
+  font-size: 25px;
+  color: #737272;
+}
+/* positive mindset banner */
+.poitive-vive {
+  background: linear-gradient(to left, rgba(255,0,0,0), rgba(255,0,0,0.4)),url("../images/watch.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 740px;
+  margin: 0 auto 15px;
+}
+.positive-title {
+  font-weight: 700;
+  font-size: 40px;
+  color: whitesmoke;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 157px;
 }
