--- a/styles/main.css
+++ b/styles/main.css
@@ -20,9 +20,9 @@
 .header-article {
   text-align: right;
   width: 500px;
-  padding-left: 47px;
-  margin-left: 600px;
-  padding-top: 170px;
+  
+  margin-left: 900px;
+  padding-top: 220px;
   /* padding-bottom: 20px; */
 }
 .title-header {
@@ -134,4 +134,48 @@
   margin-left: 40px;
   margin-top: 20px;
   margin-bottom: 25px;
+}
+/* footer style */
+.footer {
+  max-width: 100vw;
+}
+.footer-wrapper {
+  display: flex;
+  background-color: #151414;
+  padding-top: 130px;
+    padding-bottom: 130px;
+    padding-left: 286px;
+    padding-right: 259px;
+    gap: 168px;
+  justify-content: center;
+}
+.footer-title {
+  font-weight: 700;
+  font-size: 45px;
+  color: #f8f8f8;
+}
+
+.footer-sub-title,
+.email,
+.phone {
+  color: #ffffff;
+}
+.form-title {
+  font-weight: 600;
+  font-size: 25px;
+  color: #ffffff;
+}
+.input-footer {
+  padding: 5px;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  padding: 12px;
+}
+.btn-subscribe {
+  padding: 10px 20px;
+  color: #f15b22;
+  background-color: whitesmoke;
+  border: 0;
+  border-radius: 5px;
+  font-size: 1rem;
 }
