--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@
 .header-article {
   text-align: right;
   width: 500px;
-  
+
   margin-left: 900px;
   padding-top: 220px;
   /* padding-bottom: 20px; */
@@ -135,6 +135,17 @@
   margin-top: 20px;
   margin-bottom: 25px;
 }
+/* motivation */
+.motivation {
+  margin-bottom: 100px;
+  text-align: center;
+  line-height: 1.7;
+  font-weight: 700;
+  font-size: 40px;
+  color: #151414;
+}
+
+.highlight
 /* footer style */
 .footer {
   max-width: 100vw;
@@ -143,10 +154,10 @@
   display: flex;
   background-color: #151414;
   padding-top: 130px;
-    padding-bottom: 130px;
-    padding-left: 286px;
-    padding-right: 259px;
-    gap: 168px;
+  padding-bottom: 130px;
+  padding-left: 286px;
+  padding-right: 259px;
+  gap: 168px;
   justify-content: center;
 }
 .footer-title {
